// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VSimpleTable.ts should render 1`] = `
<div class="v-data-table theme--light">
  <div class="v-data-table__wrapper">
    <table>
      <tr>
        <th>
          Foo
        </th>
        <th>
          Bar
        </th>
      </tr>
      <tr>
        <td>
          baz
        </td>
        <td>
          qux
        </td>
      </tr>
    </table>
  </div>
</div>
`;

exports[`VSimpleTable.ts should render with custom height 1`] = `
<div class="v-data-table v-data-table--fixed-height theme--light">
  <div class="v-data-table__wrapper"
       style="height: 1000px;"
  >
    <table>
      <tr>
        <th>
          Foo
        </th>
        <th>
          Bar
        </th>
      </tr>
      <tr>
        <td>
          baz
        </td>
        <td>
          qux
        </td>
      </tr>
    </table>
  </div>
</div>
`;

exports[`VSimpleTable.ts should render with custom wrapper 1`] = `
<div class="v-data-table theme--light">
  <div class="custom-wrapper"
       data-test="custom-wrapper"
  >
    <table class="custom-table">
      <tr>
        <th>
          Custom Header 1
        </th>
        <th>
          Custom Header 2
        </th>
      </tr>
      <tr>
        <td>
          Custom Data 1
        </td>
        <td>
          Custom Data 2
        </td>
      </tr>
    </table>
  </div>
</div>
`;

exports[`VSimpleTable.ts should render with top & bottom slots 1`] = `
<div class="v-data-table v-data-table--has-top v-data-table--has-bottom theme--light">
  <div class="top">
    Header
  </div>
  <div class="v-data-table__wrapper">
    <table>
    </table>
  </div>
  <div class="bottom">
    Footer
  </div>
</div>
`;
